# claude-worklog-skill

./: .gitignore  README.md  config.example.json  install.sh  pyproject.toml
docs/: SETUP.md
docs/superpowers/plans/: 2026-06-12-worklog-skill.md
docs/superpowers/specs/: 2026-06-12-worklog-skill-design.md
hooks/: session_start.py
skill/: SKILL.md
tests/: conftest.py  test_cli.py  test_config.py  test_core.py  test_dates.py  test_hook.py  test_layout.py  test_project.py  test_sheets.py  test_store.py
worklog/: cli.py  config.py  core.py  dates.py  layout.py  project.py  sheets.py  store.py
